--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,14 +5,19 @@
   "start_url": ".",
   "icons": [
     {
-      "src": "assets/sushi.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "assets//android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
-  "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#ffffff",
   "background_color": "#ffffff",
+  "display": "standalone",
   "providedBy": {
     "name": "fritzschoff",
     "url": "https://github.com/fritzschoff"
